syntax = "proto3";

package io.restorecommerce.price_group;

import "io/restorecommerce/resource_base.proto";
import "io/restorecommerce/meta.proto";
import "io/restorecommerce/auth.proto";
import "io/restorecommerce/status.proto";
import "io/restorecommerce/options.proto";

// PriceGroup resource
message PriceGroup {
  optional string id = 1;
  optional io.restorecommerce.meta.Meta meta = 2;
  optional string name = 3;
  optional string description = 4;
}

message PriceGroupList {
  repeated PriceGroup items = 1;
  optional uint32 total_count = 2;
  io.restorecommerce.auth.Subject subject = 3;
}

message PriceGroupListResponse {
  repeated PriceGroupResponse items = 1;
  uint32 total_count = 2;
  io.restorecommerce.status.OperationStatus operation_status = 3;
}

message PriceGroupResponse {
  PriceGroup payload = 1;
  io.restorecommerce.status.Status status = 3;
}

message Deleted {
  string id = 1;
}

service PriceGroupService {
  option (io.restorecommerce.options.service_name) = "price_group";

  rpc Read (io.restorecommerce.resourcebase.ReadRequest) returns (PriceGroupListResponse) {
    option (io.restorecommerce.options.is_query) = true;
  };
  rpc Create (PriceGroupList) returns (PriceGroupListResponse);
  rpc Delete (io.restorecommerce.resourcebase.DeleteRequest) returns (io.restorecommerce.resourcebase.DeleteResponse);
  rpc Update (PriceGroupList) returns (PriceGroupListResponse);
  rpc Upsert (PriceGroupList) returns (PriceGroupListResponse);
}
