syntax = "proto3";

package io.restorecommerce.product_category;

import "io/restorecommerce/resource_base.proto";
import "io/restorecommerce/meta.proto";
import "io/restorecommerce/image.proto";
import "io/restorecommerce/auth.proto";
import "io/restorecommerce/status.proto";
import "io/restorecommerce/options.proto";

// Used by resolvers
import "io/restorecommerce/price_group.proto";

// ProductCategory resource
message ProductCategory {
  optional string id = 1;
  optional io.restorecommerce.meta.Meta meta = 2;
  optional string name = 3;
  optional string description = 4;
  optional string price_group_id = 5 [
    (io.restorecommerce.options.resolver) = {
      target_type: ".io.restorecommerce.price_group.PriceGroup",
      target_service: "catalog",
      target_sub_service: "price_group",
      target_method: "Read",
      field_name: "priceGroup",
    }
  ];
  optional io.restorecommerce.image.Image image = 6;
  optional Parent parent = 7;
}

message ProductCategoryList {
  repeated ProductCategory items = 1;
  optional uint32 total_count = 2;
  io.restorecommerce.auth.Subject subject = 3;
}

message ProductCategoryListResponse {
  repeated ProductCategoryResponse items = 1;
  uint32 total_count = 2;
  io.restorecommerce.status.OperationStatus operation_status = 3;
}

message ProductCategoryResponse {
  ProductCategory payload = 1;
  io.restorecommerce.status.Status status = 2;
}

message Deleted {
  string id = 1;
}

message Parent {
  optional string parent_id = 1;
}

service ProductCategoryService {
  option (io.restorecommerce.options.service_name) = "product_category";

  rpc Read (io.restorecommerce.resourcebase.ReadRequest) returns (ProductCategoryListResponse) {
    option (io.restorecommerce.options.is_query) = true;
  };
  rpc Create (ProductCategoryList) returns (ProductCategoryListResponse);
  rpc Delete (io.restorecommerce.resourcebase.DeleteRequest) returns (io.restorecommerce.resourcebase.DeleteResponse);
  rpc Update (ProductCategoryList) returns (ProductCategoryListResponse);
  rpc Upsert (ProductCategoryList) returns (ProductCategoryListResponse);
}
